modules/main/default/objects/Pet__c/Pet__c.object-meta.xml
<CustomObject>
    <description>Stores information about the pets managed by the system.</description>
    <label>Pet</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>