modules/main/default/objects/Pet__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>FLOOR((TODAY() - BirthDate__c) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>