modules/main/default/objects/Pet__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Birth date of the Pet.</description>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>