modules/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Breed of the pet.</description>
    <inlineHelpText>Breed of the pet.</inlineHelpText>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>