modules/main/default/objects/Pet__c/fields/LastVaccinatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastVaccinatedDate__c</fullName>
    <label>Last Vaccinated Date</label>
    <type>Date</type>
</CustomField>