modules/main/default/objects/Pet__c/fields/PetName__c.field-meta.xml
<CustomField>
    <fullName>PetName__c</fullName>
    <label>Pet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>