modules/main/default/objects/Pet__c/fields/SpecialNeeds__c.field-meta.xml
<CustomField>
    <fullName>SpecialNeeds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the pet requires special attention.</description>
    <label>Special Needs</label>
    <type>Checkbox</type>
</CustomField>