modules/main/default/objects/Pet__c/listViews/AllPets.listView-meta.xml
<ListView>
    <fullName>AllPets</fullName>
    <columns>NAME</columns>
    <columns>PetName__c</columns>
    <columns>Breed__c</columns>
    <columns>Size__c</columns>
    <columns>SpecialNeeds__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Pets</label>
</ListView>