modules/main/default/objects/Pet__c/listViews/AllPetsWithVaccinationDetails.listView-meta.xml
<ListView>
    <fullName>AllPetsWithVaccinationDetails</fullName>
    <columns>NAME</columns>
    <columns>PetName__c</columns>
    <columns>Breed__c</columns>
    <columns>Size__c</columns>
    <columns>SpecialNeeds__c</columns>
    <columns>Status__c</columns>
    <columns>LastVaccinatedDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Pets With Vaccination Details</label>
</ListView>